JT-2324 fix wrapping of text around rating subheads in mobile
  - fix the padding of the main container for the school profile to be
    10 px on mobile and 15 px above
  - change size of moduler header title text to be smaller on mobile

--- a/app/assets/stylesheets/components/_module-header.scss
+++ b/app/assets/stylesheets/components/_module-header.scss
@@ -1,8 +1,11 @@
 .module-header {
   .title {
     font-family: opensans-semibold;
-    font-size: 20px;
+    font-size: 18px;
     margin-left: $spacing-medium;
+    @include media-breakpoint-up(sm) {
+      font-size: 20px;
+    }
   }
   .info-circle {
     vertical-align: text-top;
